# pytest_result_sender

./: .flake8  aa.py  pyproject.toml  pytest.ini
.github/workflows/: publish_to_pypi.yaml
src/pytest_result_sender/: plugin.py
tests/: test_abc.py  test_ini.py
