[project]
name = "pytest_result_sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "oryx123", email = "1073889494@qq.com"},
]
dependencies = ["pytest>=8.3.4"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.entry-points.pytestll]
result_log = "pytest_result_sender.plugin"

[tool.pdm.build]
package-dir = "src"


