[project]
name = "pytest_result_sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "oryx123", email = "1073889494@qq.com"},
]
dependencies = ["pytest>=8.3.4"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"


[project.entry-points.pytestll]
result_log = "pytest_result_sender.plugin"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.1.2",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
   |\.hg
   |\.mypy_cache
   |\.tox
   |\.venv
   |venv
   |_build
   |buck-out
   |build
   |dist
)/
'''


[tool.pdm.scripts]
check = { composite = [ 
    "isort .",
    "black .",
    "flake8 .",
] }

test = "pytest"